    - Move /unifont.bgf into lib. Needs rootskel 1.12.
    - Resisted the urge to drop i386 el-torito images, which filled up again
      once 2.6 fb-modules was fixed, and instead just dropped all translations
      from these (unused) images.
    - Add rescue-check to all images.
    - Add rescue, rescue24, and rescue26 boot options in syslinux.
    - To document these in syslinux, removed the old, useless f9.txt, and 
      shifted f4 through f8 up one; the new f4 documents rescue mode.
    - Updated one place in the manual that referred to fn documents to reflect
      above change.
    - Document rescue mode in ia64 boot screens, but don't add stanzas for it
      since that would go over the limit of 16. Users will have to type
      rescue/enable=true
    - Add stanzas for rescue mode and document in sparc boot screen.
    - Remove devfs=mount from syslinux.cfg. Needs rootskel-bootfloppy 1.13.
    - Use dependency resolution for floppy-retriever, since mountfloppy has
      been split off of it and into a dependency.
    - Add bugreporter-udeb to the i386 root floppy, to cdrom images, and even
      to netboot images, so users can use it to report bugs earlier. Add
      commented out versions to other images on which it won't be very useful,
      since it currently required floppy support.
    - Update the manual for the /var/log/debian-installer ->
      /var/log/installer move.
    - Update the manual for the bugreporter-udeb rename, and for its
      new capailities.
    - Add an /etc/lsb-release file to the initrd, which includes the image
      build date. Useful for determining the provenance of an image.
    - bugreporter-udeb got renamed and is now on more images.
  * Kurt Roeckx
    - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
      package list.
  * Christian Perrier
    - Add the list of needed characters for Kazakh
    - Add the list of needed characters for Vietnamese
  * Colin Watson