@@ -50,7 +50,7 @@ debian-installer (trunk) UNRELEASED; urgency=low
       from these (unused) images.
     - Add rescue-check to all images.
     - Add rescue, rescue24, and rescue26 boot options in syslinux.
-    - To document these in syslinux, removed the old, useless f9.txt, and 
+    - To document these in syslinux, removed the old, useless f9.txt, and
       shifted f4 through f8 up one; the new f4 documents rescue mode.
     - Updated one place in the manual that referred to fn documents to reflect
       above change.
@@ -94,13 +94,14 @@ debian-installer (trunk) UNRELEASED; urgency=low
   * Frans Pop
     - Fix logic error in build/util/pkg-list to get rid of incorrect warnings
       about missing lists.
+    - Introduce cascading stylesheet for the HTML version of the manual.
   * Martin Michlmayr
     - Add support for rescue mode to mipsel/cobalt.
     - Rename the default target of {mips,mipsel}/sb1-swarm-bn from
       'installer' to 'install' in compliance with other arches.
     - Add support for rescue mode to {mips,mipsel}/sb1-swarm-bn.
 
- -- Frans Pop <aragorn@tiscali.nl>  Thu, 28 Apr 2005 20:47:19 +0200
+ -- Frans Pop <aragorn@tiscali.nl>  Sun, 22 May 2005 15:54:35 +0200
 
 debian-installer (2005xxxx) UNRELEASED; urgency=low
 
